--- a/styles.css
+++ b/styles.css
@@ -1,11 +1,13 @@
-.logo {
-    display: flex;
-    align-items: center;
-    justify-content: center;
+body {
+    background-color: aquamarine;
+}
+button {
+    background-color: yellow;
 }
 
-#new-book {
+.container {
     display: flex;
+    flex-direction: column;
     align-items: center;
     justify-content: center;
 }
